--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,7 +11,8 @@ django = "*"
 psycopg2 = "*"
 httpx = "^0.23.3"
 pydantic = "^1.10.4"
-envcast = "^1.2.0"
+qrcode = "^7.4.2"
+envparse = "^0.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
