--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.1",
     "react-router-dom": "^6.8.1",
     "styled-components": "^5.3.6",
     "zod": "^3.20.5"
