--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,7 +10,7 @@ python = "^3.11"
 django = "*"
 psycopg2 = "*"
 httpx = "^0.23.3"
-pydantic = "^1.10.4"
+pydantic = {extras = ["email"], version = "^1.10.4"}
 qrcode = "^7.4.2"
 envparse = "^0.2.0"
 pdf417gen = "^0.7.1"
