Many fancy things

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,7 @@ pydantic = "^1.10.4"
 qrcode = "^7.4.2"
 envparse = "^0.2.0"
 pdf417gen = "^0.7.1"
+django-cors-headers = "^3.13.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "*"
